Add unfinished docs on TCPSocket, Pipe, and RunLoop.

--- a/ObjectKit/Dictionary_h/Classes/Dictionary/index.html
+++ b/ObjectKit/Dictionary_h/Classes/Dictionary/index.html
@@ -277,19 +277,6 @@ and with that key the value may be accessed.
 <hr class="afterClassOrHeaderInfo">
 <br><a name="HeaderDoc_groups"><h2 class="h2tight">Groups</h2></a>
 
-<h3>Indexed retrieval</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:put:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey:" target="_top">-atKey:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:" target="_top">-atKey:ifAbsent:</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
 <h3>Indexed insertion</h3>
 <div class="group_desc_indent">
 </div>
@@ -301,45 +288,15 @@ and with that key the value may be accessed.
 </dl>
 </div>
 <p>&nbsp;</p>
-<h3>Comparison</h3>
+<h3>Removal</h3>
 <div class="group_desc_indent">
 </div>
 <h4>Group members:</h4>
 <div class="group_indent">
 <dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/hash" logicalPath="//apple_ref/occ/instm/Dictionary/hash" target="_top">-hash</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/removeKey:ifAbsent:" logicalPath="//apple_ref/occ/instm/Dictionary/removeKey:" target="_top">-removeKey:</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/isEqual:" logicalPath="//apple_ref/occ/instm/Dictionary/isEqual:" target="_top">-isEqual:</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Instance management</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/copy" logicalPath="//apple_ref/occ/instm/Dictionary/copy" target="_top">-copy</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/deepCopy" logicalPath="//apple_ref/occ/instm/Dictionary/deepCopy" target="_top">-deepCopy</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/emptyYourself" logicalPath="//apple_ref/occ/instm/Dictionary/emptyYourself" target="_top">-emptyYourself</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Iteration</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/eachKey" logicalPath="//apple_ref/occ/instm/Dictionary/eachKey" target="_top">-eachKey</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/eachValue" logicalPath="//apple_ref/occ/instm/Dictionary/eachValue" target="_top">-eachValue</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/keysDo:" logicalPath="//apple_ref/occ/instm/Dictionary/keysDo:" target="_top">-keysDo:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/removeKey:ifAbsent:" logicalPath="//apple_ref/occ/instm/Dictionary/removeKey:ifAbsent:" target="_top">-removeKey:ifAbsent:</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
@@ -359,15 +316,58 @@ and with that key the value may be accessed.
 </dl>
 </div>
 <p>&nbsp;</p>
-<h3>Removal</h3>
+<h3>Comparison</h3>
 <div class="group_desc_indent">
 </div>
 <h4>Group members:</h4>
 <div class="group_indent">
 <dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/removeKey:ifAbsent:" logicalPath="//apple_ref/occ/instm/Dictionary/removeKey:" target="_top">-removeKey:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/hash" logicalPath="//apple_ref/occ/instm/Dictionary/hash" target="_top">-hash</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/removeKey:ifAbsent:" logicalPath="//apple_ref/occ/instm/Dictionary/removeKey:ifAbsent:" target="_top">-removeKey:ifAbsent:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/isEqual:" logicalPath="//apple_ref/occ/instm/Dictionary/isEqual:" target="_top">-isEqual:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Indexed retrieval</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey:" target="_top">-atKey:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:" target="_top">-atKey:ifAbsent:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Iteration</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/eachKey" logicalPath="//apple_ref/occ/instm/Dictionary/eachKey" target="_top">-eachKey</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/eachValue" logicalPath="//apple_ref/occ/instm/Dictionary/eachValue" target="_top">-eachValue</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/keysDo:" logicalPath="//apple_ref/occ/instm/Dictionary/keysDo:" target="_top">-keysDo:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Instance management</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/copy" logicalPath="//apple_ref/occ/instm/Dictionary/copy" target="_top">-copy</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/deepCopy" logicalPath="//apple_ref/occ/instm/Dictionary/deepCopy" target="_top">-deepCopy</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/emptyYourself" logicalPath="//apple_ref/occ/instm/Dictionary/emptyYourself" target="_top">-emptyYourself</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
@@ -413,7 +413,7 @@ and with that key the value may be accessed.
 <h3><a name="atKey:">atKey:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:;name=start -->- <a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:put:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey" target="_top"><span class="function">atKey</span></a>:<!-- a logicalPath="//apple_ref/occ/econst/aKey //apple_ref/occ/data/Dictionary/aKey //apple_ref/occ/data/aKey //apple_ref/occ/clconst/Dictionary/aKey " machineGenerated="true" --><span class="var">aKey</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:;name=start -->- <a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey" target="_top"><span class="function">atKey</span></a>:<!-- a logicalPath="//apple_ref/occ/econst/aKey //apple_ref/occ/data/Dictionary/aKey //apple_ref/occ/data/aKey //apple_ref/occ/clconst/Dictionary/aKey " machineGenerated="true" --><span class="var">aKey</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
@@ -438,7 +438,7 @@ If the key is not found, returns <em>nil</em>.
 <h3><a name="atKey:ifAbsent:">atKey:ifAbsent:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:;name=start -->- <a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:put:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey" target="_top"><span class="function">atKey</span></a>:<span class="param">aKey</span> <!-- a logicalPath="//apple_ref/occ/instm/Dictionary/ifAbsent //apple_ref/occ/clm/Dictionary/ifAbsent //apple_ref/occ/intfcm/Dictionary/ifAbsent //apple_ref/occ/intfm/Dictionary/ifAbsent //apple_ref/occ/func/ifAbsent //apple_ref/occ/ftmplt/Dictionary/ifAbsent //apple_ref/occ/defn/ifAbsent //apple_ref/occ/macro/ifAbsent //apple_ref/doc/anysymbol/ifAbsent" machineGenerated="true" --><span class="function">ifAbsent</span><!-- /a -->:<!-- a logicalPath="//apple_ref/occ/econst/exceptionBlock //apple_ref/occ/data/Dictionary/exceptionBlock //apple_ref/occ/data/exceptionBlock //apple_ref/occ/clconst/Dictionary/exceptionBlock " machineGenerated="true" --><span class="var">exceptionBlock</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:;name=start -->- <a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey" target="_top"><span class="function">atKey</span></a>:<span class="param">aKey</span> <!-- a logicalPath="//apple_ref/occ/instm/Dictionary/ifAbsent //apple_ref/occ/clm/Dictionary/ifAbsent //apple_ref/occ/intfcm/Dictionary/ifAbsent //apple_ref/occ/intfm/Dictionary/ifAbsent //apple_ref/occ/func/ifAbsent //apple_ref/occ/ftmplt/Dictionary/ifAbsent //apple_ref/occ/defn/ifAbsent //apple_ref/occ/macro/ifAbsent //apple_ref/doc/anysymbol/ifAbsent" machineGenerated="true" --><span class="function">ifAbsent</span><!-- /a -->:<!-- a logicalPath="//apple_ref/occ/econst/exceptionBlock //apple_ref/occ/data/Dictionary/exceptionBlock //apple_ref/occ/data/exceptionBlock //apple_ref/occ/clconst/Dictionary/exceptionBlock " machineGenerated="true" --><span class="var">exceptionBlock</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
@@ -468,7 +468,7 @@ no such key is found in the dictionary and returning its result.
 <h3><a name="atKey:put:">atKey:put:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:put:;name=start -->- <a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:put:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey" target="_top"><span class="function">atKey</span></a>:<span class="param">aKey</span> <!-- a logicalPath="//apple_ref/occ/instm/Dictionary/put //apple_ref/occ/clm/Dictionary/put //apple_ref/occ/intfcm/Dictionary/put //apple_ref/occ/intfm/Dictionary/put //apple_ref/occ/func/put //apple_ref/occ/ftmplt/Dictionary/put //apple_ref/occ/defn/put //apple_ref/occ/macro/put //apple_ref/doc/anysymbol/put" machineGenerated="true" --><span class="function">put</span><!-- /a -->:<!-- a logicalPath="//apple_ref/occ/econst/anObject //apple_ref/occ/data/Dictionary/anObject //apple_ref/occ/data/anObject //apple_ref/occ/clconst/Dictionary/anObject " machineGenerated="true" --><span class="var">anObject</span><!-- /a -->;  <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:put:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:put:;name=start -->- <a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Dictionary/atKey:" logicalPath="//apple_ref/occ/instm/Dictionary/atKey" target="_top"><span class="function">atKey</span></a>:<span class="param">aKey</span> <!-- a logicalPath="//apple_ref/occ/instm/Dictionary/put //apple_ref/occ/clm/Dictionary/put //apple_ref/occ/intfcm/Dictionary/put //apple_ref/occ/intfm/Dictionary/put //apple_ref/occ/func/put //apple_ref/occ/ftmplt/Dictionary/put //apple_ref/occ/defn/put //apple_ref/occ/macro/put //apple_ref/doc/anysymbol/put" machineGenerated="true" --><span class="function">put</span><!-- /a -->:<!-- a logicalPath="//apple_ref/occ/econst/anObject //apple_ref/occ/data/Dictionary/anObject //apple_ref/occ/data/anObject //apple_ref/occ/clconst/Dictionary/anObject " machineGenerated="true" --><span class="var">anObject</span><!-- /a -->;  <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Dictionary/atKey:put:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
