--- a/ObjectKit/index.html
+++ b/ObjectKit/index.html
@@ -59,6 +59,28 @@
 </td>
 </tr></table>
 </blockquote>
+<p class="groupname"><a name="group_I/O"></a><i>I/O</i></p>
+<blockquote class="groupindent">
+<table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
+<td width="33%">
+<a name="group_I/O_class_PI" href="Pipe_h/Classes/Pipe/index.html">Pipe</a><br>
+</td>
+<td width="33%">
+<a name="group_I/O_class_TC" href="TCPSocket_h/Classes/TCPSocket/index.html">TCPSocket</a><br>
+</td>
+<td width="33%"></td>
+</tr></table>
+</blockquote>
+<p class="groupname"><a name="group_Run_Loop"></a><i>Run Loop</i></p>
+<blockquote class="groupindent">
+<table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
+<td width="33%">
+<a name="group_Run_Loop_class_RU" href="RunLoop_h/Classes/RunLoop/index.html">RunLoop</a><br>
+</td>
+<td width="33%"></td>
+<td width="33%"></td>
+</tr></table>
+</blockquote>
 
 			</td></tr>
 </table>
