--- a/ObjectKit/OrdCltn_h/Classes/OrdCltn/index.html
+++ b/ObjectKit/OrdCltn_h/Classes/OrdCltn/index.html
@@ -284,66 +284,30 @@ index begins at 0 for the first object, and ends at
 <hr class="afterClassOrHeaderInfo">
 <br><a name="HeaderDoc_groups"><h2 class="h2tight">Groups</h2></a>
 
-<h3>Enumeration</h3>
+<h3>Instance management</h3>
 <div class="group_desc_indent">
 </div>
 <h4>Group members:</h4>
 <div class="group_indent">
 <dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/do:until:" logicalPath="//apple_ref/occ/instm/OrdCltn/do:" target="_top">-do:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/copy" logicalPath="//apple_ref/occ/instm/OrdCltn/copy" target="_top">-copy</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/do:until:" logicalPath="//apple_ref/occ/instm/OrdCltn/do:until:" target="_top">-do:until:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/deepCopy" logicalPath="//apple_ref/occ/instm/OrdCltn/deepCopy" target="_top">-deepCopy</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/elementsPerform:" logicalPath="//apple_ref/occ/instm/OrdCltn/elementsPerform:" target="_top">-elementsPerform:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/reverseDo:" logicalPath="//apple_ref/occ/instm/OrdCltn/reverseDo:" target="_top">-reverseDo:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/emptyYourself" logicalPath="//apple_ref/occ/instm/OrdCltn/emptyYourself" target="_top">-emptyYourself</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
 <p>&nbsp;</p>
-<h3>Locating</h3>
+<h3>Testing contents</h3>
 <div class="group_desc_indent">
 </div>
 <h4>Group members:</h4>
 <div class="group_indent">
 <dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/contains:" logicalPath="//apple_ref/occ/instm/OrdCltn/contains:" target="_top">-contains:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/includesAllOf:" logicalPath="//apple_ref/occ/instm/OrdCltn/includesAllOf:" target="_top">-includesAllOf:</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/find:" logicalPath="//apple_ref/occ/instm/OrdCltn/find:" target="_top">-find:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/findMatching:" logicalPath="//apple_ref/occ/instm/OrdCltn/findMatching:" target="_top">-findMatching:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/includes:" logicalPath="//apple_ref/occ/instm/OrdCltn/includes:" target="_top">-includes:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/offsetOf:" logicalPath="//apple_ref/occ/instm/OrdCltn/offsetOf:" target="_top">-offsetOf:</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Conversion</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/asOrdCltn" logicalPath="//apple_ref/occ/instm/OrdCltn/asOrdCltn" target="_top">-asOrdCltn</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/asSet" logicalPath="//apple_ref/occ/instm/OrdCltn/asSet" target="_top">-asSet</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Factory</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/new:" logicalPath="//apple_ref/occ/clm/OrdCltn/new:" target="_top">+new:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:" logicalPath="//apple_ref/occ/clm/OrdCltn/with:" target="_top">+with:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:with:" logicalPath="//apple_ref/occ/clm/OrdCltn/with:with:" target="_top">+with:with:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/includesAnyOf:" logicalPath="//apple_ref/occ/instm/OrdCltn/includesAnyOf:" target="_top">-includesAnyOf:</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
@@ -369,6 +333,53 @@ index begins at 0 for the first object, and ends at
 </dl>
 </div>
 <p>&nbsp;</p>
+<h3>Combining</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/difference:" logicalPath="//apple_ref/occ/instm/OrdCltn/difference:" target="_top">-difference:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/intersection:" logicalPath="//apple_ref/occ/instm/OrdCltn/intersection:" target="_top">-intersection:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/union:" logicalPath="//apple_ref/occ/instm/OrdCltn/union:" target="_top">-union:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Factory</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/new:" logicalPath="//apple_ref/occ/clm/OrdCltn/new:" target="_top">+new:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:with:" logicalPath="//apple_ref/occ/clm/OrdCltn/with:" target="_top">+with:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:with:" logicalPath="//apple_ref/occ/clm/OrdCltn/with:with:" target="_top">+with:with:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Inquiry</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/isEmpty" logicalPath="//apple_ref/occ/instm/OrdCltn/isEmpty" target="_top">-isEmpty</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/isEqual:" logicalPath="//apple_ref/occ/instm/OrdCltn/isEqual:" target="_top">-isEqual:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/lastOffset" logicalPath="//apple_ref/occ/instm/OrdCltn/lastOffset" target="_top">-lastOffset</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/size" logicalPath="//apple_ref/occ/instm/OrdCltn/size" target="_top">-size</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
 <h3>Adding and removing contents</h3>
 <div class="group_desc_indent">
 </div>
@@ -382,17 +393,19 @@ index begins at 0 for the first object, and ends at
 </dl>
 </div>
 <p>&nbsp;</p>
-<h3>Instance management</h3>
+<h3>Enumeration</h3>
 <div class="group_desc_indent">
 </div>
 <h4>Group members:</h4>
 <div class="group_indent">
 <dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/copy" logicalPath="//apple_ref/occ/instm/OrdCltn/copy" target="_top">-copy</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/do:until:" logicalPath="//apple_ref/occ/instm/OrdCltn/do:" target="_top">-do:</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/deepCopy" logicalPath="//apple_ref/occ/instm/OrdCltn/deepCopy" target="_top">-deepCopy</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/do:until:" logicalPath="//apple_ref/occ/instm/OrdCltn/do:until:" target="_top">-do:until:</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/emptyYourself" logicalPath="//apple_ref/occ/instm/OrdCltn/emptyYourself" target="_top">-emptyYourself</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/elementsPerform:" logicalPath="//apple_ref/occ/instm/OrdCltn/elementsPerform:" target="_top">-elementsPerform:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/reverseDo:" logicalPath="//apple_ref/occ/instm/OrdCltn/reverseDo:" target="_top">-reverseDo:</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
@@ -420,38 +433,6 @@ index begins at 0 for the first object, and ends at
 </dl>
 </div>
 <p>&nbsp;</p>
-<h3>Removal</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/remove:" logicalPath="//apple_ref/occ/instm/OrdCltn/remove:" target="_top">-remove:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/remove:ifAbsent:" logicalPath="//apple_ref/occ/instm/OrdCltn/remove:ifAbsent:" target="_top">-remove:ifAbsent:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/removeAt:" logicalPath="//apple_ref/occ/instm/OrdCltn/removeAt:" target="_top">-removeAt:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/removeFirst" logicalPath="//apple_ref/occ/instm/OrdCltn/removeFirst" target="_top">-removeFirst</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/removeLast" logicalPath="//apple_ref/occ/instm/OrdCltn/removeLast" target="_top">-removeLast</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Testing contents</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/includesAllOf:" logicalPath="//apple_ref/occ/instm/OrdCltn/includesAllOf:" target="_top">-includesAllOf:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/includesAnyOf:" logicalPath="//apple_ref/occ/instm/OrdCltn/includesAnyOf:" target="_top">-includesAnyOf:</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
 <h3>Indexed retrieval</h3>
 <div class="group_desc_indent">
 </div>
@@ -473,34 +454,53 @@ index begins at 0 for the first object, and ends at
 </dl>
 </div>
 <p>&nbsp;</p>
-<h3>Combining</h3>
+<h3>Conversion</h3>
 <div class="group_desc_indent">
 </div>
 <h4>Group members:</h4>
 <div class="group_indent">
 <dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/difference:" logicalPath="//apple_ref/occ/instm/OrdCltn/difference:" target="_top">-difference:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/asOrdCltn" logicalPath="//apple_ref/occ/instm/OrdCltn/asOrdCltn" target="_top">-asOrdCltn</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/intersection:" logicalPath="//apple_ref/occ/instm/OrdCltn/intersection:" target="_top">-intersection:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/union:" logicalPath="//apple_ref/occ/instm/OrdCltn/union:" target="_top">-union:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/asSet" logicalPath="//apple_ref/occ/instm/OrdCltn/asSet" target="_top">-asSet</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
 <p>&nbsp;</p>
-<h3>Inquiry</h3>
+<h3>Locating</h3>
 <div class="group_desc_indent">
 </div>
 <h4>Group members:</h4>
 <div class="group_indent">
 <dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/isEmpty" logicalPath="//apple_ref/occ/instm/OrdCltn/isEmpty" target="_top">-isEmpty</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/contains:" logicalPath="//apple_ref/occ/instm/OrdCltn/contains:" target="_top">-contains:</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/isEqual:" logicalPath="//apple_ref/occ/instm/OrdCltn/isEqual:" target="_top">-isEqual:</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/find:" logicalPath="//apple_ref/occ/instm/OrdCltn/find:" target="_top">-find:</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/lastOffset" logicalPath="//apple_ref/occ/instm/OrdCltn/lastOffset" target="_top">-lastOffset</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/findMatching:" logicalPath="//apple_ref/occ/instm/OrdCltn/findMatching:" target="_top">-findMatching:</a></tt></dt>
 <dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/size" logicalPath="//apple_ref/occ/instm/OrdCltn/size" target="_top">-size</a></tt></dt>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/includes:" logicalPath="//apple_ref/occ/instm/OrdCltn/includes:" target="_top">-includes:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/offsetOf:" logicalPath="//apple_ref/occ/instm/OrdCltn/offsetOf:" target="_top">-offsetOf:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Removal</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/remove:" logicalPath="//apple_ref/occ/instm/OrdCltn/remove:" target="_top">-remove:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/remove:ifAbsent:" logicalPath="//apple_ref/occ/instm/OrdCltn/remove:ifAbsent:" target="_top">-remove:ifAbsent:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/removeAt:" logicalPath="//apple_ref/occ/instm/OrdCltn/removeAt:" target="_top">-removeAt:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/removeFirst" logicalPath="//apple_ref/occ/instm/OrdCltn/removeFirst" target="_top">-removeFirst</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/OrdCltn/removeLast" logicalPath="//apple_ref/occ/instm/OrdCltn/removeLast" target="_top">-removeLast</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
@@ -1765,7 +1765,7 @@ a collection does.
 <h3><a name="with:">with:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:" logicalPath="//apple_ref/occ/instm/OrdCltn/with //apple_ref/occ/clm/OrdCltn/with" target="_top"><span class="function">with</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/int //apple_ref/occ/tdef/int //apple_ref/occ/tag/int //apple_ref/occ/struct/int //apple_ref/occ/intf/int //apple_ref/doc/anysymbol/int" machineGenerated="true" --><span class="type">int</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/nArgs //apple_ref/occ/data/OrdCltn/nArgs //apple_ref/occ/data/nArgs //apple_ref/occ/clconst/OrdCltn/nArgs " machineGenerated="true" --><span class="var">nArgs</span><!-- /a -->, ...; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:with:" logicalPath="//apple_ref/occ/instm/OrdCltn/with //apple_ref/occ/clm/OrdCltn/with" target="_top"><span class="function">with</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/int //apple_ref/occ/tdef/int //apple_ref/occ/tag/int //apple_ref/occ/struct/int //apple_ref/occ/intf/int //apple_ref/doc/anysymbol/int" machineGenerated="true" --><span class="type">int</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/nArgs //apple_ref/occ/data/OrdCltn/nArgs //apple_ref/occ/data/nArgs //apple_ref/occ/clconst/OrdCltn/nArgs " machineGenerated="true" --><span class="var">nArgs</span><!-- /a -->, ...; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
@@ -1796,7 +1796,7 @@ a collection does.
 <h3><a name="with:with:">with:with:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:with:;name=start -->+ <a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:" logicalPath="//apple_ref/occ/instm/OrdCltn/with //apple_ref/occ/clm/OrdCltn/with" target="_top"><span class="function">with</span></a>:<span class="param">firstObject</span> <a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:" logicalPath="//apple_ref/occ/instm/OrdCltn/with //apple_ref/occ/clm/OrdCltn/with" target="_top"><span class="function">with</span></a>:<!-- a logicalPath="//apple_ref/occ/econst/nextObject //apple_ref/occ/data/OrdCltn/nextObject //apple_ref/occ/data/nextObject //apple_ref/occ/clconst/OrdCltn/nextObject " machineGenerated="true" --><span class="var">nextObject</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:with:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:with:;name=start -->+ <a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:with:" logicalPath="//apple_ref/occ/instm/OrdCltn/with //apple_ref/occ/clm/OrdCltn/with" target="_top"><span class="function">with</span></a>:<span class="param">firstObject</span> <a machinegenerated="true" href="index.html#//apple_ref/occ/clm/OrdCltn/with:with:" logicalPath="//apple_ref/occ/instm/OrdCltn/with //apple_ref/occ/clm/OrdCltn/with" target="_top"><span class="function">with</span></a>:<!-- a logicalPath="//apple_ref/occ/econst/nextObject //apple_ref/occ/data/OrdCltn/nextObject //apple_ref/occ/data/nextObject //apple_ref/occ/clconst/OrdCltn/nextObject " machineGenerated="true" --><span class="var">nextObject</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/OrdCltn/with:with:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
