Begin documenting four more objects.

--- a/ObjectKit/index.html
+++ b/ObjectKit/index.html
@@ -47,16 +47,39 @@
 				
       <p class="groupname"><a name="group_Collection"></a><i>Collection</i></p>
 <blockquote class="groupindent">
-<table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
+<table border="0" cellpadding="1" cellspacing="0" width="420">
+<tr>
 <td width="33%">
 <a name="group_Collection_class_DI" href="Dictionary_h/Classes/Dictionary/index.html">Dictionary</a><br>
 </td>
 <td width="33%">
-<a name="group_Collection_class_OR" href="OrdCltn_h/Classes/OrdCltn/index.html">OrdCltn</a><br>
+<a name="group_Collection_class_PA" href="Pair_h/Classes/Pair/index.html">Pair</a><br>
 </td>
 <td width="33%">
 <a name="group_Collection_class_ST" href="OCString_h/Classes/String/index.html">String</a><br>
 </td>
+</tr>
+<tr>
+<td width="33%">
+<a name="group_Collection_class_OR" href="OrdCltn_h/Classes/OrdCltn/index.html">OrdCltn</a><br>
+</td>
+<td width="33%">
+<a name="group_Collection_class_SO" href="SortCltn_h/Classes/SortCltn/index.html">SortCltn</a><br>
+</td>
+<td width="33%"></td>
+</tr>
+</table>
+</blockquote>
+<p class="groupname"><a name="group_Container"></a><i>Container</i></p>
+<blockquote class="groupindent">
+<table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
+<td width="33%">
+<a name="group_Container_class_DA" href="Date_h/Classes/Date/index.html">Date</a><br>
+</td>
+<td width="33%">
+<a name="group_Container_class_NU" href="Number_h/Classes/Number/index.html">Number</a><br>
+</td>
+<td width="33%"></td>
 </tr></table>
 </blockquote>
 <p class="groupname"><a name="group_I/O"></a><i>I/O</i></p>
