--- a/ObjectKit/RunLoop_h/index.html
+++ b/ObjectKit/RunLoop_h/index.html
@@ -261,7 +261,7 @@ function disclosure_triangle(elt) {
 <div class="spec_sheet_info_box"><table cellspacing="0" class="specbox"><tr>
 <td scope="row"><b>Includes:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text">
-<!-- a logicalPath="//apple_ref/doc/header/select.h" machineGenerated="true" -->&lt;sys/select.h&gt;<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/IODevice.h" machineGenerated="true" -->"IODevice.h"<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/SortCltn.h" machineGenerated="true" -->"SortCltn.h"<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/Stack.h" machineGenerated="true" -->"Stack.h"<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/Set.h" machineGenerated="true" -->"Set.h"<!-- /a -->
+<!-- a logicalPath="//apple_ref/doc/header/select.h" machineGenerated="true" -->&lt;sys/select.h&gt;<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/IODevice.h" machineGenerated="true" -->"IODevice.h"<!-- /a --><br><a machinegenerated="true" href="../SortCltn_h/index.html#//apple_ref/doc/header/SortCltn.h" logicalPath="//apple_ref/doc/header/SortCltn.h" target="_top">"SortCltn.h"</a><br><!-- a logicalPath="//apple_ref/doc/header/Stack.h" machineGenerated="true" -->"Stack.h"<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/Set.h" machineGenerated="true" -->"Set.h"<!-- /a -->
 </div></div></td>
 </tr></table></div>
 <h2>Introduction</h2>
