--- a/ObjectKit/Pipe_h/Classes/Pipe/index.html
+++ b/ObjectKit/Pipe_h/Classes/Pipe/index.html
@@ -261,8 +261,7 @@ function disclosure_triangle(elt) {
 <tr>
 <td scope="row"><b>Superclass:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text">
-<!-- a logicalPath="//apple_ref/occ/cl/IODevice" machineGenerated="true" -->IODevice<!-- /a -->
-</div></div></td>
+<a machinegenerated="true" href="../../../IODevice_h/Classes/IODevice/index.html#//apple_ref/occ/cl/IODevice" logicalPath="//apple_ref/occ/cl/IODevice" target="_top">IODevice</a></div></div></td>
 </tr>
 <tr>
 <td scope="row"><b>Declared In:</b></td>
