--- a/ObjectKit/index.html
+++ b/ObjectKit/index.html
@@ -56,7 +56,7 @@
 <a name="group_Collection_class_PA" href="Pair_h/Classes/Pair/index.html">Pair</a><br>
 </td>
 <td width="33%">
-<a name="group_Collection_class_ST" href="OCString_h/Classes/String/index.html">String</a><br>
+<a name="group_Collection_class_SO" href="SortCltn_h/Classes/SortCltn/index.html">SortCltn</a><br>
 </td>
 </tr>
 <tr>
@@ -64,9 +64,11 @@
 <a name="group_Collection_class_OR" href="OrdCltn_h/Classes/OrdCltn/index.html">OrdCltn</a><br>
 </td>
 <td width="33%">
-<a name="group_Collection_class_SO" href="SortCltn_h/Classes/SortCltn/index.html">SortCltn</a><br>
+<a name="group_Collection_class_SE" href="Set_h/Classes/Set/index.html">Set</a><br>
 </td>
-<td width="33%"></td>
+<td width="33%">
+<a name="group_Collection_class_ST" href="OCString_h/Classes/String/index.html">String</a><br>
+</td>
 </tr>
 </table>
 </blockquote>
@@ -86,11 +88,23 @@
 <blockquote class="groupindent">
 <table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
 <td width="33%">
+<a name="group_I/O_class_IO" href="IODevice_h/Classes/IODevice/index.html">IODevice</a><br>
+</td>
+<td width="33%">
 <a name="group_I/O_class_PI" href="Pipe_h/Classes/Pipe/index.html">Pipe</a><br>
 </td>
 <td width="33%">
 <a name="group_I/O_class_TC" href="TCPSocket_h/Classes/TCPSocket/index.html">TCPSocket</a><br>
 </td>
+</tr></table>
+</blockquote>
+<p class="groupname"><a name="group_Proxy"></a><i>Proxy</i></p>
+<blockquote class="groupindent">
+<table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
+<td width="33%">
+<a name="group_Proxy_class_AT" href="AtomicProxy_h/Classes/AtomicProxy/index.html">AtomicProxy</a><br>
+</td>
+<td width="33%"></td>
 <td width="33%"></td>
 </tr></table>
 </blockquote>
