--- a/ObjectKit/OCString_h/Classes/String/index.html
+++ b/ObjectKit/OCString_h/Classes/String/index.html
@@ -285,80 +285,6 @@ and parameters through the C sprintf function using <a href="index.html#//apple_
 <hr class="afterClassOrHeaderInfo">
 <br><a name="HeaderDoc_groups"><h2 class="h2tight">Groups</h2></a>
 
-<h3>Concatenation</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/at:insert:" logicalPath="//apple_ref/occ/instm/String/at:insert:" target="_top">-at:insert:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/at:insert:count:" logicalPath="//apple_ref/occ/instm/String/at:insert:count:" target="_top">-at:insert:count:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/concat:" logicalPath="//apple_ref/occ/instm/String/concat:" target="_top">-concat:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/concatSTR:" logicalPath="//apple_ref/occ/instm/String/concatSTR:" target="_top">-concatSTR:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/strcat:" logicalPath="//apple_ref/occ/instm/String/strcat:" target="_top">-strcat:</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Conversion</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asDouble" logicalPath="//apple_ref/occ/instm/String/asDouble" target="_top">-asDouble</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asInt" logicalPath="//apple_ref/occ/instm/String/asInt" target="_top">-asInt</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asLong" logicalPath="//apple_ref/occ/instm/String/asLong" target="_top">-asLong</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asSTR:maxSize:" logicalPath="//apple_ref/occ/instm/String/asSTR:maxSize:" target="_top">-asSTR:maxSize:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/str" logicalPath="//apple_ref/occ/instm/String/str" target="_top">-str</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/strCopy" logicalPath="//apple_ref/occ/instm/String/strCopy" target="_top">-strCopy</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/toLower" logicalPath="//apple_ref/occ/instm/String/toLower" target="_top">-toLower</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/toUpper" logicalPath="//apple_ref/occ/instm/String/toUpper" target="_top">-toUpper</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Substrings</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/componentsSeparatedByString:" logicalPath="//apple_ref/occ/instm/String/componentsSeparatedByString:" target="_top">-componentsSeparatedByString:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/rangeOfString:" logicalPath="//apple_ref/occ/instm/String/rangeOfString:" target="_top">-rangeOfString:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/substringWithRange:" logicalPath="//apple_ref/occ/instm/String/substringWithRange:" target="_top">-substringWithRange:</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
-<h3>Indexed access</h3>
-<div class="group_desc_indent">
-</div>
-<h4>Group members:</h4>
-<div class="group_indent">
-<dl>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/charAt:" logicalPath="//apple_ref/occ/instm/String/charAt:" target="_top">-charAt:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/charAt:put:" logicalPath="//apple_ref/occ/instm/String/charAt:put:" target="_top">-charAt:put:</a></tt></dt>
-<dd></dd>
-<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/size" logicalPath="//apple_ref/occ/instm/String/size" target="_top">-size</a></tt></dt>
-<dd></dd>
-</dl>
-</div>
-<p>&nbsp;</p>
 <h3>Comparison</h3>
 <div class="group_desc_indent">
 </div>
@@ -378,6 +304,80 @@ and parameters through the C sprintf function using <a href="index.html#//apple_
 <dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/isEqual:" logicalPath="//apple_ref/occ/instm/String/isEqual:" target="_top">-isEqual:</a></tt></dt>
 <dd></dd>
 <dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/isEqualSTR:" logicalPath="//apple_ref/occ/instm/String/isEqualSTR:" target="_top">-isEqualSTR:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Substrings</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/componentsSeparatedByString:" logicalPath="//apple_ref/occ/instm/String/componentsSeparatedByString:" target="_top">-componentsSeparatedByString:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/rangeOfString:" logicalPath="//apple_ref/occ/instm/String/rangeOfString:" target="_top">-rangeOfString:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/substringWithRange:" logicalPath="//apple_ref/occ/instm/String/substringWithRange:" target="_top">-substringWithRange:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Conversion</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asDouble" logicalPath="//apple_ref/occ/instm/String/asDouble" target="_top">-asDouble</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asInt" logicalPath="//apple_ref/occ/instm/String/asInt" target="_top">-asInt</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asLong" logicalPath="//apple_ref/occ/instm/String/asLong" target="_top">-asLong</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/asSTR:maxSize:" logicalPath="//apple_ref/occ/instm/String/asSTR:maxSize:" target="_top">-asSTR:maxSize:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/strcat:" logicalPath="//apple_ref/occ/instm/String/str" target="_top">-str</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/strCopy" logicalPath="//apple_ref/occ/instm/String/strCopy" target="_top">-strCopy</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/toLower" logicalPath="//apple_ref/occ/instm/String/toLower" target="_top">-toLower</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/toUpper" logicalPath="//apple_ref/occ/instm/String/toUpper" target="_top">-toUpper</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Concatenation</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/at:insert:" logicalPath="//apple_ref/occ/instm/String/at:insert:" target="_top">-at:insert:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/at:insert:count:" logicalPath="//apple_ref/occ/instm/String/at:insert:count:" target="_top">-at:insert:count:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/concat:" logicalPath="//apple_ref/occ/instm/String/concat:" target="_top">-concat:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/concatSTR:" logicalPath="//apple_ref/occ/instm/String/concatSTR:" target="_top">-concatSTR:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/strcat:" logicalPath="//apple_ref/occ/instm/String/strcat:" target="_top">-strcat:</a></tt></dt>
+<dd></dd>
+</dl>
+</div>
+<p>&nbsp;</p>
+<h3>Indexed access</h3>
+<div class="group_desc_indent">
+</div>
+<h4>Group members:</h4>
+<div class="group_indent">
+<dl>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/charAt:" logicalPath="//apple_ref/occ/instm/String/charAt:" target="_top">-charAt:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/charAt:put:" logicalPath="//apple_ref/occ/instm/String/charAt:put:" target="_top">-charAt:put:</a></tt></dt>
+<dd></dd>
+<dt><tt><a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/size" logicalPath="//apple_ref/occ/instm/String/size" target="_top">-size</a></tt></dt>
 <dd></dd>
 </dl>
 </div>
@@ -1006,7 +1006,7 @@ sprintf function.
 <h3><a name="str:">str:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/String/str:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/str" logicalPath="//apple_ref/occ/instm/String/str" target="_top"><span class="function">str</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/aString //apple_ref/occ/data/String/aString //apple_ref/occ/data/aString //apple_ref/occ/clconst/String/aString " machineGenerated="true" --><span class="var">aString</span><!-- /a -->;  <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/String/str:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/String/str:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/String/strcat:" logicalPath="//apple_ref/occ/instm/String/str" target="_top"><span class="function">str</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/aString //apple_ref/occ/data/String/aString //apple_ref/occ/data/aString //apple_ref/occ/clconst/String/aString " machineGenerated="true" --><span class="var">aString</span><!-- /a -->;  <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/String/str:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
