Add support for protocols. Accordingly update docs.

--- a/ObjectKit/Set_h/Classes/Set/index.html
+++ b/ObjectKit/Set_h/Classes/Set/index.html
@@ -268,6 +268,13 @@ function disclosure_triangle(elt) {
 <td scope="row"><b>Declared In:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text"><a logicalpath="//apple_ref/doc/header/Set.h" target="_top" machinegenerated="true" href="../../index.html#//apple_ref/doc/header/Set.h">Set.h</a></div></div></td>
 </tr>
+<tr>
+<td scope="row"><b>See:</b></td>
+<td><div style="margin-bottom:1px"><div class="content_text"><dl>
+<dt><p><a href="../../../cltn_h/Protocols/Cltn/index.html#//apple_ref/occ/intf/Cltn" logicalPath="//apple_ref/occ/intf/Cltn" target="_top">Cltn</a></p></dt>
+<dd></dd>
+</dl></div></div></td>
+</tr>
 </table></div>
 <h2>Introduction</h2>
 <p><!-- headerDoc=abstract;uid=//apple_ref/occ/cl/Set;name=start --><!-- begin abstract --></p>
@@ -275,22 +282,22 @@ function disclosure_triangle(elt) {
 <!-- end abstract --><!-- headerDoc=abstract;uid=//apple_ref/occ/cl/Set;name=end --></p>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
 <!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/cl/Set;name=start --><p>Stores objects in a hashed table. Each object may be added only
-once; no duplicates are permitted. The <a href="../../../OCString_h/Classes/String/index.html#//apple_ref/occ/instm/String/hash" logicalPath="//apple_ref/occ/cl/hash //apple_ref/occ/tdef/hash //apple_ref/occ/tag/hash //apple_ref/occ/struct/hash //apple_ref/occ/intf/hash //apple_ref/occ/econst/hash //apple_ref/occ/data/hash //apple_ref/occ/clconst/hash //apple_ref/occ/instm/hash //apple_ref/occ/clm/hash //apple_ref/occ/intfcm/hash //apple_ref/occ/intfm/hash //apple_ref/occ/func/hash //apple_ref/occ/ftmplt/hash //apple_ref/occ/defn/hash //apple_ref/occ/macro/hash //apple_ref/doc/com/intfm/hash //apple_ref/doc/anysymbol/hash" target="_top">hash</a> message is used for
+once; no duplicates are permitted. The <a href="../../../Dictionary_h/Classes/Dictionary/index.html#//apple_ref/occ/instm/Dictionary/hash" logicalPath="//apple_ref/occ/cl/hash //apple_ref/occ/tdef/hash //apple_ref/occ/tag/hash //apple_ref/occ/struct/hash //apple_ref/occ/intf/hash //apple_ref/occ/econst/hash //apple_ref/occ/data/hash //apple_ref/occ/clconst/hash //apple_ref/occ/instm/hash //apple_ref/occ/clm/hash //apple_ref/occ/intfcm/hash //apple_ref/occ/intfm/hash //apple_ref/occ/func/hash //apple_ref/occ/ftmplt/hash //apple_ref/occ/defn/hash //apple_ref/occ/macro/hash //apple_ref/doc/com/intfm/hash //apple_ref/doc/anysymbol/hash" target="_top">hash</a> message is used for
 this purpose. Both that and the <a href="../../../OrdCltn_h/Classes/OrdCltn/index.html#//apple_ref/occ/instm/OrdCltn/isEqual:" logicalPath="//apple_ref/occ/cl/isEqual: //apple_ref/occ/tdef/isEqual: //apple_ref/occ/tag/isEqual: //apple_ref/occ/struct/isEqual: //apple_ref/occ/intf/isEqual: //apple_ref/occ/econst/isEqual: //apple_ref/occ/data/isEqual: //apple_ref/occ/clconst/isEqual: //apple_ref/occ/instm/isEqual: //apple_ref/occ/clm/isEqual: //apple_ref/occ/intfcm/isEqual: //apple_ref/occ/intfm/isEqual: //apple_ref/occ/func/isEqual: //apple_ref/occ/ftmplt/isEqual: //apple_ref/occ/defn/isEqual: //apple_ref/occ/macro/isEqual: //apple_ref/doc/com/intfm/isEqual: //apple_ref/doc/anysymbol/isEqual:" target="_top">isEqual:</a> message should be
-responded to by any object to be added to the set, and <a href="../../../OCString_h/Classes/String/index.html#//apple_ref/occ/instm/String/hash" logicalPath="//apple_ref/occ/cl/hash //apple_ref/occ/tdef/hash //apple_ref/occ/tag/hash //apple_ref/occ/struct/hash //apple_ref/occ/intf/hash //apple_ref/occ/econst/hash //apple_ref/occ/data/hash //apple_ref/occ/clconst/hash //apple_ref/occ/instm/hash //apple_ref/occ/clm/hash //apple_ref/occ/intfcm/hash //apple_ref/occ/intfm/hash //apple_ref/occ/func/hash //apple_ref/occ/ftmplt/hash //apple_ref/occ/defn/hash //apple_ref/occ/macro/hash //apple_ref/doc/com/intfm/hash //apple_ref/doc/anysymbol/hash" target="_top">hash</a>
+responded to by any object to be added to the set, and <a href="../../../Dictionary_h/Classes/Dictionary/index.html#//apple_ref/occ/instm/Dictionary/hash" logicalPath="//apple_ref/occ/cl/hash //apple_ref/occ/tdef/hash //apple_ref/occ/tag/hash //apple_ref/occ/struct/hash //apple_ref/occ/intf/hash //apple_ref/occ/econst/hash //apple_ref/occ/data/hash //apple_ref/occ/clconst/hash //apple_ref/occ/instm/hash //apple_ref/occ/clm/hash //apple_ref/occ/intfcm/hash //apple_ref/occ/intfm/hash //apple_ref/occ/func/hash //apple_ref/occ/ftmplt/hash //apple_ref/occ/defn/hash //apple_ref/occ/macro/hash //apple_ref/doc/com/intfm/hash //apple_ref/doc/anysymbol/hash" target="_top">hash</a>
 should return an identical hash for an object to that of one that
 <a href="../../../OrdCltn_h/Classes/OrdCltn/index.html#//apple_ref/occ/instm/OrdCltn/isEqual:" logicalPath="//apple_ref/occ/cl/isEqual: //apple_ref/occ/tdef/isEqual: //apple_ref/occ/tag/isEqual: //apple_ref/occ/struct/isEqual: //apple_ref/occ/intf/isEqual: //apple_ref/occ/econst/isEqual: //apple_ref/occ/data/isEqual: //apple_ref/occ/clconst/isEqual: //apple_ref/occ/instm/isEqual: //apple_ref/occ/clm/isEqual: //apple_ref/occ/intfcm/isEqual: //apple_ref/occ/intfm/isEqual: //apple_ref/occ/func/isEqual: //apple_ref/occ/ftmplt/isEqual: //apple_ref/occ/defn/isEqual: //apple_ref/occ/macro/isEqual: //apple_ref/doc/com/intfm/isEqual: //apple_ref/doc/anysymbol/isEqual:" target="_top">isEqual:</a> to another.
 </p>
 <p>The object may not be properly located within the Set, or duplicates may be
 permitted to be added, if the object should change its respond to
-<a href="../../../OCString_h/Classes/String/index.html#//apple_ref/occ/instm/String/hash" logicalPath="//apple_ref/occ/cl/hash //apple_ref/occ/tdef/hash //apple_ref/occ/tag/hash //apple_ref/occ/struct/hash //apple_ref/occ/intf/hash //apple_ref/occ/econst/hash //apple_ref/occ/data/hash //apple_ref/occ/clconst/hash //apple_ref/occ/instm/hash //apple_ref/occ/clm/hash //apple_ref/occ/intfcm/hash //apple_ref/occ/intfm/hash //apple_ref/occ/func/hash //apple_ref/occ/ftmplt/hash //apple_ref/occ/defn/hash //apple_ref/occ/macro/hash //apple_ref/doc/com/intfm/hash //apple_ref/doc/anysymbol/hash" target="_top">hash</a> while it is in the Set.
+<a href="../../../Dictionary_h/Classes/Dictionary/index.html#//apple_ref/occ/instm/Dictionary/hash" logicalPath="//apple_ref/occ/cl/hash //apple_ref/occ/tdef/hash //apple_ref/occ/tag/hash //apple_ref/occ/struct/hash //apple_ref/occ/intf/hash //apple_ref/occ/econst/hash //apple_ref/occ/data/hash //apple_ref/occ/clconst/hash //apple_ref/occ/instm/hash //apple_ref/occ/clm/hash //apple_ref/occ/intfcm/hash //apple_ref/occ/intfm/hash //apple_ref/occ/func/hash //apple_ref/occ/ftmplt/hash //apple_ref/occ/defn/hash //apple_ref/occ/macro/hash //apple_ref/doc/com/intfm/hash //apple_ref/doc/anysymbol/hash" target="_top">hash</a> while it is in the Set.
 <!-- headerDoc=discussion;uid=//apple_ref/occ/cl/Set;name=end --><!-- end discussion -->
 </p>
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
 <p class="hd_copyright">&copy; David Mackay </p>
-<p class="hd_timestamp">Last Updated: Sunday, January 10, 2016
+<p class="hd_timestamp">Last Updated: Tuesday, January 12, 2016
 </p>
 </div>
 </td>
