--- a/ObjectKit/SortCltn_h/Classes/SortCltn/index.html
+++ b/ObjectKit/SortCltn_h/Classes/SortCltn/index.html
@@ -268,6 +268,13 @@ function disclosure_triangle(elt) {
 <td scope="row"><b>Declared In:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text"><a logicalpath="//apple_ref/doc/header/SortCltn.h" target="_top" machinegenerated="true" href="../../index.html#//apple_ref/doc/header/SortCltn.h">SortCltn.h</a></div></div></td>
 </tr>
+<tr>
+<td scope="row"><b>See:</b></td>
+<td><div style="margin-bottom:1px"><div class="content_text"><dl>
+<dt><p><a href="../../../cltn_h/Protocols/Cltn/index.html#//apple_ref/occ/intf/Cltn" logicalPath="//apple_ref/occ/intf/Cltn" target="_top">Cltn</a></p></dt>
+<dd></dd>
+</dl></div></div></td>
+</tr>
 </table></div>
 <h2>Introduction</h2>
 <p><!-- headerDoc=abstract;uid=//apple_ref/occ/cl/SortCltn;name=start --><!-- begin abstract --></p>
@@ -284,7 +291,7 @@ responses.
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
 <p class="hd_copyright">&copy; David Mackay </p>
-<p class="hd_timestamp">Last Updated: Sunday, January 10, 2016
+<p class="hd_timestamp">Last Updated: Tuesday, January 12, 2016
 </p>
 </div>
 </td>
