--- a/ObjectKit/SortCltn_h/index.html
+++ b/ObjectKit/SortCltn_h/index.html
@@ -261,8 +261,7 @@ function disclosure_triangle(elt) {
 <div class="spec_sheet_info_box"><table cellspacing="0" class="specbox"><tr>
 <td scope="row"><b>Includes:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text">
-<!-- a logicalPath="//apple_ref/doc/header/cltn.h" machineGenerated="true" -->"cltn.h"<!-- /a -->
-</div></div></td>
+<a machinegenerated="true" href="../cltn_h/index.html#//apple_ref/doc/header/cltn.h" logicalPath="//apple_ref/doc/header/cltn.h" target="_top">"cltn.h"</a></div></div></td>
 </tr></table></div>
 <h2>Introduction</h2>
 <p><!-- headerDoc=abstract;uid=//apple_ref/doc/header/SortCltn.h;name=start --><!-- begin abstract -->Use the links in the table of contents to the left to access the documentation.<br><!-- end abstract --><!-- headerDoc=abstract;uid=//apple_ref/doc/header/SortCltn.h;name=end --></p>
@@ -278,7 +277,7 @@ function disclosure_triangle(elt) {
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
 <p class="hd_copyright">&copy; David Mackay </p>
-<p class="hd_timestamp">Last Updated: Sunday, January 10, 2016
+<p class="hd_timestamp">Last Updated: Tuesday, January 12, 2016
 </p>
 </div>
 </td>
