--- a/ObjectKit/index.html
+++ b/ObjectKit/index.html
@@ -44,7 +44,6 @@
 			</tr>
 <tr><td width="600" align="center" valign="top">
 <h2>Classes</h2>
-				
       <p class="groupname"><a name="group_Collection"></a><i>Collection</i></p>
 <blockquote class="groupindent">
 <table border="0" cellpadding="1" cellspacing="0" width="420">
@@ -53,10 +52,10 @@
 <a name="group_Collection_class_DI" href="Dictionary_h/Classes/Dictionary/index.html">Dictionary</a><br>
 </td>
 <td width="33%">
-<a name="group_Collection_class_PA" href="Pair_h/Classes/Pair/index.html">Pair</a><br>
+<a name="group_Collection_class_SE" href="Set_h/Classes/Set/index.html">Set</a><br>
 </td>
 <td width="33%">
-<a name="group_Collection_class_SO" href="SortCltn_h/Classes/SortCltn/index.html">SortCltn</a><br>
+<a href="OCString_h/Classes/String/index.html">String</a><br>
 </td>
 </tr>
 <tr>
@@ -64,11 +63,18 @@
 <a name="group_Collection_class_OR" href="OrdCltn_h/Classes/OrdCltn/index.html">OrdCltn</a><br>
 </td>
 <td width="33%">
-<a name="group_Collection_class_SE" href="Set_h/Classes/Set/index.html">Set</a><br>
+<a name="group_Collection_class_SO" href="SortCltn_h/Classes/SortCltn/index.html">SortCltn</a><br>
+</td>
+<td width="33%"></td>
+</tr>
+<tr>
+<td width="33%">
+<a name="group_Collection_class_PA" href="Pair_h/Classes/Pair/index.html">Pair</a><br>
 </td>
 <td width="33%">
-<a name="group_Collection_class_ST" href="OCString_h/Classes/String/index.html">String</a><br>
+<a name="group_Collection_class_ST" href="Stack_h/Classes/Stack/index.html">Stack</a><br>
 </td>
+<td width="33%"></td>
 </tr>
 </table>
 </blockquote>
@@ -118,6 +124,20 @@
 <td width="33%"></td>
 </tr></table>
 </blockquote>
+
+
+<h2>Protocols</h2>
+      <p class="groupname"><a name="group_Collection"></a><i>Collection</i></p>
+<blockquote class="groupindent">
+<table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
+<td width="33%">
+<a name="group_Collection_protocol_CL" href="cltn_h/Protocols/Cltn/index.html">Cltn</a><br>
+</td>
+<td width="33%"></td>
+<td width="33%"></td>
+</tr></table>
+</blockquote>
+
 
 			</td></tr>
 </table>
