--- a/Runtime/index.html
+++ b/Runtime/index.html
@@ -44,7 +44,6 @@
 			</tr>
 <tr><td width="600" align="center" valign="top">
 <h2>Classes</h2>
-				
       <p class="groupname"><a name="group_JX_Runtime"></a><i>JX Runtime</i></p>
 <blockquote class="groupindent">
 <table border="0" cellpadding="1" cellspacing="0" width="420">
@@ -72,6 +71,10 @@
 </tr>
 </table>
 </blockquote>
+
+
+<h2>Protocols</h2>
+      
 
 			</td></tr>
 </table>
